# router/post.ts
@@ -2,7 +2,11 @@ import express, { Router } from "express";
 import { validate } from "@middleware/validate";
 import { postController } from "@controller/postController";
 import { validateToken } from "@middleware/jwt";
-import { getPostSchema, insertPostSchema } from "@common/vaidation";
+import {
+  getPostSchema,
+  insertPostSchema,
+  searchPostSchema,
+} from "@common/vaidation";
 
 const postRouter: Router = express.Router();
 
@@ -13,9 +17,19 @@ postRouter.post(
   postController.insertPost
 );
 
-postRouter.get("/", validateToken,
-validate(getPostSchema, ["query"]),
-postController.getPost);
+postRouter.get(
+  "/",
+  validateToken,
+  validate(getPostSchema, ["query"]),
+  postController.getPost
+);
+
+postRouter.get(
+  "/search",
+//   validateToken,
+  validate(searchPostSchema, ["query"]),
+  postController.searchPost
+);
 
 postRouter.get("/:id_post", validateToken, postController.getById);
 
